--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/booker
-spring.datasource.username=b00k3r_pr0j3ct
-spring.datasource.password=D3v3L0p3R
+spring.datasource.username=root
+spring.datasource.password=Metalcry135:3
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8080
